--- a/web/app/views/admin/show.html.haml
+++ b/web/app/views/admin/show.html.haml
@@ -1,14 +1,13 @@
 #main-container.container-fluid
-  - if flash[:notice]
-    .row
-      .content.col-md-4.col-md-offset-4
-        .jumbotron{align: "center"}
-          .notice= flash[:notice]
   .row
     .content.col-md-4.col-md-offset-4
       .panel.panel-primary{align: "center"}
-        .panel-heading{style: "background-color : rgba(0,255,0, 0.5)"}
-          %h1 Users info
+        - if @user.admin
+          .panel-heading{style: "background-color : rgba(255,0,0, 0.5)"}
+            %h1 Admin info
+        - else
+          .panel-heading{style: "background-color : rgba(0,255,0, 0.5)"}
+            %h1 Users info
         .panel-body
           .field
             %p
