--- a/web/app/views/guest/index.html.haml
+++ b/web/app/views/guest/index.html.haml
@@ -1,3 +1,8 @@
+- if flash[:notice]
+  .row
+    .content.col-md-4.col-md-offset-4
+      .jumbotron{align: "center"}
+        .notice= flash[:notice]
 .row
   .content.col-md-6.col-md-offset-3
     .jumbotron
