--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Blog
+    %title GPS Tracker
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
@@ -14,50 +14,48 @@
             - if !current_user
               %ul.nav.navbar-nav.col-md-10
                 %li
-                  = link_to "GPS Tracker",
+                  = link_to 'GPS Tracker',
                     root_path(), method: :get
               %ul.nav.navbar-nav.navbar-right.col-md-2
                 %li
-                  = link_to "Sign Up", new_user_path
+                  = link_to 'Sign Up', new_user_path
                 %li
-                  = link_to "Login", login_path
+                  = link_to 'Login', login_path
             - elsif !current_user.admin
               %ul.nav.navbar-nav.col-md-10
                 %li
-                  = link_to "GPS Tracker",
-                    root_path(), method: :get
+                  = link_to 'GPS Tracker',
+                    profile_index_path, method: :get
                 %li.dropdown
-                  %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+                  %a.dropdown-toggle{'data-toggle': 'dropdown', href: '#'}
                     Tracks
                     %span.caret
                   %ul.dropdown-menu
-                    = render partial: "dashboard/dates"
-                  %li
-                    = link_to "Edit Profile", edit_user_path(current_user.id)
-
+                    = render partial: 'dashboard/dates'
+                %li
+                  = link_to 'My profile', profile_path(current_user.id)
+                %li
+                  = link_to 'Edit Profile', edit_user_path(current_user.id)
               %ul.nav.navbar-nav.navbar-right.col-md-1
                 %li
-                  = link_to "Logout", :logout, method: :post
+                  = link_to 'Logout', :logout, method: :post
             - else
               %ul.nav.navbar-nav.col-md-10
                 %li
-                  = link_to "GPS Tracker",
+                  = link_to 'GPS Tracker',
                     root_path(), method: :get
                 %li
-                  = link_to "All Users", admin_users_path
-                %li.dropdown
-                  %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-                    Tracks
-                    %span.caret
-                  %ul.dropdown-menu
-                    = render partial: "dashboard/dates"
+                  = link_to 'All Users', admin_users_path
                 %li
-                  = link_to "Edit Profile", edit_admin_path(current_user.id)
+                  = link_to 'Edit Profile', edit_user_path(current_user.id)
+                %li
+                  = link_to 'My profile', admin_path(current_user.id)
 
               %ul.nav.navbar-nav.navbar-right.col-md-2
                 %li
-                  = link_to "Logout", :logout, method: :post
+                  = link_to 'New User', new_user_path
                 %li
-                  = link_to "New User", new_admin_path
+                  = link_to 'Logout', :logout, method: :post
+
 
     = yield
