--- a/web/app/views/users/_editing.html.haml
+++ b/web/app/views/users/_editing.html.haml
@@ -3,7 +3,7 @@
     .content.col-md-4.col-md-offset-4
       .panel.panel-primary
         .panel-heading
-          .h1 Create User
+          .h1{align: 'center'} Change User
         .panel-body
           - if user.errors.any?
             .alert.alert-danger{role: 'alert'}
@@ -12,18 +12,17 @@
                   %li= message
           .field
             .form-group
-              %label{for: 'inputEmail1'} Email address
-              %input#inputEmail1.form-control{'aria-describedby': 'emailHelp', placeholder: "example@gmail.com", type: "email", name: 'user[email]'}/
-              %small#emailHelp.form-text.text-muted We'll never share your email with anyone else.
+              .h2{align: 'center'}
+                %i=@user.email
           .field
             .form-group
-              %label{for: 'inputPassword1'} Password
+              %label{for: 'exampleInputPassword1'} Password
               %input#inputPassword1.form-control{placeholder: 'Password', type: 'password', name: 'user[password]'}/
 
           .field
             .form-group
-              %label{for: 'inputPassword2'} Check password
+              %label{for: 'exampleInputPassword2'} Confirm password
               %input#inputPassword2.form-control{placeholder: 'Password', type: 'password', name: 'user[password_confirmation]'}/
 
           .field{align: 'center'}
-            =form.submit 'Create', class: 'btn btn-primary'
+            =form.submit 'Change', class: 'btn btn-primary'
