--- a/web/app/views/dashboard/_table.html.haml
+++ b/web/app/views/dashboard/_table.html.haml
@@ -1,22 +1,36 @@
-%tr{id: "#group-#{paths.where(group: i).first.id}"}
-  - if paths.last.group == -1
-    %td
-      = link_to "Current", change_name_api_tracker_path(paths.first.id), remote: true
-  - else
-    %td
-      .input_window{id: "inp-#{i}"}
-        .form-group
-          %input.form-control{placeholder: 'Forest walk', id: "input_name#{i}"}
-        %button.button1.btn.btn-success.glyphicon.glyphicon-ok
-        %button.button2.btn.btn-danger.glyphicon.glyphicon-remove
+%tr{id: "group-#{paths.where(group: i).first.id}"}
+  %td
+    - if paths.last.group == -1
+      Current
+    - else
+      #myModal.modal.fade{'aria-labelledby': 'mySmallModalLabel', role: 'dialog', tabindex: '-1'}
+        .modal-dialog{role: 'document'}
+          .modal-content
+            .modal-header
+              %button.close{'aria-label': 'Close', 'data-dismiss': 'modal', type: 'button'}
+                %span{'aria-hidden': 'true'} ×
+              %h4#myModalLabel.modal-title{align: 'center'}
+                Changing name...
+            .modal-body
+              .input_window{id: "inp-#{i}"}
+                .form-group
+                  - if !paths.where(group: i).first.custom_name.present?
+                    %input.form-control{placeholder: 'Forest walk', id: "input_name#{i}", value: "Group #{i - paths.first.group + 1}"}
+                  - else
+                    %input.form-control{placeholder: 'Forest walk', id: "input_name#{i}", value: "#{paths.where(group: i).first.custom_name}"}
+            .modal-footer
+              %button.button1.btn.btn-danger{'data-dismiss': 'modal'}
+                .glyphicon.glyphicon-remove{data: {'mydata': "#{i}", 'track': "#{paths.where(group: i).first.id}"}}
+              %button.button2.btn.btn-success.glyphicon.glyphicon-ok{'data-dismiss': 'modal', data: {'mydata': "#{i}", 'track': "#{paths.where(group: i).first.id}"}}
+
       .hover_text{id: "#{i}"}
-        - if paths.where(id: i).first.custom_name == nil || paths.where(id: i).first.custom_name == ""
+        - if !paths.where(group: i).first.custom_name.present?
           Group #{i - paths.first.group + 1}
         - else
-          =paths.where(id: i).first.custom_name
+          =paths.where(group: i).first.custom_name
         .wrapper_cart
           .cartouche{data: {'mydata': "#{i}", 'track': "#{paths.where(group: i).first.id}"}}
-            %span
+            %span{'data-target': '#myModal', 'data-toggle': 'modal', type: 'button'}
               .glyphicon.glyphicon-pencil
   %td= paths.where(group: i).first.created_at
   %td= paths.where(group: i).last.created_at
