--- a/web/app/views/dashboard/_table.html.haml
+++ b/web/app/views/dashboard/_table.html.haml
@@ -14,10 +14,7 @@
             .modal-body
               .input_window{id: "inp-#{i}"}
                 .form-group
-                  - if !paths.where(group: i).first.custom_name.present?
-                    %input.form-control{placeholder: 'Forest walk', id: "input_name#{i}", value: "Group #{i - paths.first.group + 1}"}
-                  - else
-                    %input.form-control{placeholder: 'Forest walk', id: "input_name#{i}", value: "#{paths.where(group: i).first.custom_name}"}
+                  %input.form-control{placeholder: 'Forest walk', id: "input_name#{i}"}
             .modal-footer
               %button.button1.btn.btn-danger{'data-dismiss': 'modal'}
                 .glyphicon.glyphicon-remove{data: {'mydata': "#{i}", 'track': "#{paths.where(group: i).first.id}"}}
@@ -30,7 +27,7 @@
           =paths.where(group: i).first.custom_name
         .wrapper_cart
           .cartouche{data: {'mydata': "#{i}", 'track': "#{paths.where(group: i).first.id}"}}
-            %span{'data-target': '#myModal', 'data-toggle': 'modal', type: 'button'}
-              .glyphicon.glyphicon-pencil
+            %button.btn.btn-primary{"data-target" => "#myModal", "data-toggle" => "modal", "data-whatever" => "#{i}", :type => "button"}
+              Open modal
   %td= paths.where(group: i).first.created_at
   %td= paths.where(group: i).last.created_at
