--- a/web/app/views/user_mailer/activation_needed_email.html.erb
+++ b/web/app/views/user_mailer/activation_needed_email.html.erb
@@ -1,5 +1,12 @@
-<h1>User#activation_needed_email</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/activation_needed_email.html.erb
-</p>
+.row
+  .content.col-md-5.col-md-offset-1
+    %h1
+      ="Welcome to GPSTracker.com, #{@user.email}"
+    %h1
+      You have successfully signed up to GPSTracker.com,
+    %h2
+      ="your username is: #{@user.email}."
+    %h2
+      ="To login to the site, just follow this link: #{@url}."
+    %h2
+      Thanks for joining and have a great day!
