--- a/web/app/views/user_mailer/activation_needed_email.text.erb
+++ b/web/app/views/user_mailer/activation_needed_email.text.erb
@@ -1,7 +1,7 @@
-Welcome to example.com, <%= @user.email %>
+Welcome to GPSTracker.com, <%= @user.email %>
 ===============================================
 
-You have successfully signed up to example.com,
+You have successfully signed up to GPSTracker.com,
 your username is: <%= @user.email %>.
 
 To login to the site, just follow this link: <%= @url %>.
